# Trackora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  RECOVERY.md  SECURITY.md  build-installer.iss  build-rpm.sh  build-windows.ps1  generate_demo_db.py  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt  trackora-dashboard.spec  trackora.spec  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: discord-announcement.yml
docs/: CHANGELOG.md  release_notes_v1.0.md
landing/: README.md  package-lock.json  package.json
shell-extension/: INSTALL.md
shell-extension/trackora@trackora.dev/: extension.js  metadata.json
systemd/: INSTALL.md  trackora.service
trackora/: __init__.py  __main__.py  cli.py  detector.py  format_output.py  service.py  window_state.py
trackora/assets/: trackora.desktop  trackora.metainfo.xml
trackora/backends/: __init__.py  gnome_shell_extension.py
trackora/charts/: __init__.py  _base.py  daily_usage_chart.py  weekly_usage_chart.py
trackora/database/: __init__.py  dashboard.py  sqlite.py
trackora/gui/: __init__.py  __main__.py  app.py  dashboard_window.py  utils.py
trackora/models/: __init__.py  dashboard.py  session.py  window_state.py
trackora/services/: __init__.py  tracking_service.py
trackora/tracker/: __init__.py  session_tracker.py
trackora/utils/: __init__.py  app_names.py  formatting.py  grouping.py  lock.py  logging.py  paths.py  settings.py  time.py
wayland_focus_watch/: requirements.txt
windows/: __init__.py  daemon.py  startup.py  tracker.py
(+37 files in other folders)
